tests/baselines/reference/parser_continueInIterationStatement4.errors.txt
==== tests/cases/compiler/parser_continueInIterationStatement4.ts (1 errors) ====
    for (var i in something) {
                  ~~~~~~~~~
!!! parser_continueInIterationStatement4.ts(1,15): error TS2095: Cannot find name 'something'.
      continue;
    }